--- a/Data Modeling with Apache Cassandra/Project_1B_ Project_Template.ipynb
+++ b/Data Modeling with Apache Cassandra/Project_1B_ Project_Template.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "editable": true
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "editable": true
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "editable": true,
     "toggleable": true,
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "editable": true
    },
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "editable": true
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "editable": true
    },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {
     "editable": true
    },
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {
     "editable": true
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {
     "editable": true
    },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {
     "editable": true
    },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {
     "editable": true
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {
     "editable": true
    },
@@ -500,7 +500,7 @@
    "source": [
     "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
     "## sessionId = 338, and itemInSession = 4\n",
-    "query = \"select * from song_details_by_sessionid_and_itemlnsession where sessionId=338 and  itemInSession = 4\"\n",
+    "query = \"select * from session_item where sessionId=338 and  itemInSession = 4\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "except Exception as e:\n",
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {
     "editable": true
    },
@@ -521,6 +521,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Down To The Bone Keep On Keepin' On Sylvie Cruz\n",
+      "Three Drives Greece 2000 Sylvie Cruz\n",
+      "Sebastien Tellier Kilometer Sylvie Cruz\n",
       "Lonnie Gordon Catch You Baby (Steve Pitron & Max Sanna Radio Edit) Sylvie Cruz\n"
      ]
     }
@@ -528,7 +531,7 @@
    "source": [
     "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
     "## for userid = 10, sessionid = 182\n",
-    "query = \"select * from song_details_by_userid_and_sessionId where userid = 10 and sessionid = 182\"\n",
+    "query = \"select * from user_item where userid = 10 and sessionid = 182\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "except Exception as e:\n",
@@ -542,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {
     "editable": true
    },
@@ -558,7 +561,7 @@
    "source": [
     "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
     "\n",
-    "query = \"select * from song_details_by_song where song ='All Hands Against His Own'\"\n",
+    "query = \"select * from user_song where song ='All Hands Against His Own'\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "except Exception as e:\n",
@@ -591,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {
     "editable": true
    },
@@ -602,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "editable": true
    },
@@ -640,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "editable": true
    },
