--- a/Data Modeling with Apache Cassandra/Project_1B_ Project_Template.ipynb
+++ b/Data Modeling with Apache Cassandra/Project_1B_ Project_Template.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {
     "editable": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {
     "editable": true
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {
     "editable": true
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {
     "editable": true
    },
@@ -192,12 +192,12 @@
     "editable": true
    },
    "source": [
-    "#### Create Keyspace"
+    "#### Creating Keyspace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {
     "editable": true
    },
@@ -221,12 +221,12 @@
     "editable": true
    },
    "source": [
-    "#### Set Keyspace"
+    "#### Setting Keyspace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {
     "editable": true
    },
@@ -245,18 +245,11 @@
     "editable": true
    },
    "source": [
-    "### Initiate a list of table names "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "tables = ['session_item','user_item','user_song']"
+    "## Task:\n",
+    "Create queries to ask the following three questions of the data\n",
+    "1. Give me the artist, song title and song's length in the music app history that was heard during sessionId = 338, and itemInSession = 4\n",
+    "2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
+    "3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
    ]
   },
   {
@@ -265,12 +258,13 @@
     "editable": true
    },
    "source": [
-    "### Drop tables if they exists in the list"
+    "### To answer above questions we need to create three tables with different Primary keys and populate that tables with data from given file.\n",
+    "#### First, initiating a list of table names and then dropping tables from the list in Cassandra."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "metadata": {
     "editable": true
    },
@@ -286,6 +280,10 @@
     }
    ],
    "source": [
+    "# Initiate list of tables\n",
+    "tables = ['session_item','user_item','user_song']\n",
+    "\n",
+    "# Remove table if its already exist\n",
     "for table in tables:\n",
     "    query = \"drop TABLE IF EXISTS \"\n",
     "    query += table \n",
@@ -302,12 +300,12 @@
     "editable": true
    },
    "source": [
-    "### Create tables from a list of tables"
+    "#### Second, we loop through the list of tables and create each table according to given questions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "metadata": {
     "editable": true
    },
@@ -333,16 +331,22 @@
     "    query += table\n",
     "    if count == 0:\n",
     "        \n",
-    "# For Query 1: Table must be partitioned by columns (sessionId, itemInSession) because the query filters results on columns (sessionId, itemInSession)\n",
+    "# For Query 1: Primary Key has two fields: sessionId is the partition key, and itemInSession are clustering keys.\n",
+    "# Partitioning is done by sessionId and within that partition, rows are ordered by the itemInSession.\n",
+    "# Create Table \"session_item\". \n",
     "        query += \"\"\" (sessionId int, itemInSession int, artist text, firstName text, gender text,\n",
     "lastName text, length float, level text, location text, song text, userId int,  PRIMARY KEY (sessionId, itemInSession))\"\"\"\n",
     "    \n",
-    "# For Query 2: must be partitioned by (userId, sessionId) and clustered for sorting by itemInSession\n",
+    "# For Query 2: Primary Key has three fields: userid and sessionid are the partition key, and itemInSession is clustering key.\n",
+    "# Partitioning is done by userid and sessionid, and within that partition, rows are ordered by the itemInSession.\n",
+    "# Create Table \"user_item\".\n",
     "    elif count == 1:\n",
     "        query += \"\"\" (userId int, sessionId int, itemInSession int, artist text, firstName text, gender text, \n",
     "lastName text, length float, level text, location text, song text, PRIMARY KEY ((userId, sessionId), itemInSession)) WITH CLUSTERING ORDER BY (itemInSession ASC)\"\"\"\n",
     "        \n",
-    "# For Query 3: must be partitioned by song and userId\n",
+    "# For Query 3: Primary Key has two fields: song is the partition key, and userid is clustering key.\n",
+    "# Partitioning is done by song and within that partition, rows are ordered by the userid.\n",
+    "# Create Table \"user_song\".\n",
     "    elif count == 2:\n",
     "        query += \"\"\" (song text, userId int, artist text, firstName text, gender text, itemInSession int, sessionId int, lastName text, length float, level text, location text, PRIMARY KEY (song, userId))\"\"\"\n",
     "    count +=1\n",
@@ -360,24 +364,26 @@
     "editable": true
    },
    "source": [
-    "### Populate created above tables with data from provided file"
+    "#### Third, we populate created above tables with data from provided file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
+    "# count is a variable to check index of table name in the initiated tables list\n",
     "count = 0\n",
     "\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "for table in tables:\n",
     "    query = \"INSERT INTO \"+table\n",
-    "\n",
+    "    \n",
+    "    # Insert into table 'session_item':\n",
     "    if count == 0:\n",
     "\n",
     "        query += \" (sessionId, itemInSession, artist , firstName , gender , lastName , length , level , location ,  song , userId) \"\n",
@@ -391,7 +397,8 @@
     "                    session.execute(query, (int(line[8]),int(line[3]),line[0],line[1],line[2],line[4],float(line[5]),line[6],line[7],line[9],int(line[10])))\n",
     "                except Exception as e:\n",
     "                    print(e)\n",
-    "\n",
+    "                    \n",
+    "    # Insert into table 'user_item':\n",
     "    elif count == 1:\n",
     "\n",
     "        query += \" (userId, sessionId, itemInSession, artist, firstName , gender , lastName , length , level , location ,  song ) \"\n",
@@ -405,7 +412,8 @@
     "                    session.execute(query, (int(line[10]),int(line[8]),int(line[3]),line[0],line[1],line[2],line[4],float(line[5]),line[6],line[7],line[9]))\n",
     "                except Exception as e:\n",
     "                    print(e)\n",
-    "\n",
+    "                    \n",
+    "   # Insert into table 'user_song':\n",
     "    elif count == 2:\n",
     "\n",
     "        query += \" (song, userId, artist , firstName , gender, itemInSession, sessionId, lastName , length , level , location) \"\n",
@@ -430,12 +438,12 @@
     "editable": true
    },
    "source": [
-    "### Check number of rows inserted into each table"
+    "### Now we should check number of rows inserted into each table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 17,
    "metadata": {
     "editable": true
    },
@@ -473,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "metadata": {
     "editable": true
    },
@@ -508,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "metadata": {
     "editable": true
    },
@@ -546,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 20,
    "metadata": {
     "editable": true
    },
@@ -586,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 21,
    "metadata": {
     "editable": true
    },
@@ -623,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "metadata": {
     "editable": true
    },
